--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
