--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "user-frontend-app",
   "version": "0.1.0",
+  "proxy":"http://localhost:3002",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
@@ -15,6 +16,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
+    "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
