--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "user-frontend-app",
   "version": "0.1.0",
-  "proxy":"http://localhost:3002",
+  "proxy": "http://localhost:3002",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.3.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "@mui/styles": "^5.0.0",
