--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-places-autocomplete": "^7.3.0",
+    "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
