--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
+    "socket.io-client": "^4.3.2",
+    "timeago.js": "^4.0.2",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
