--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "user-frontend-app",
   "version": "0.1.0",
- 
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
@@ -38,7 +37,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "gh-pages": "^3.2.3",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
   }
